# datagame

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py  riot_api.py
src/datagame/: config.py  main.py  riot_api.py  storage.py
tests/: test_smoke.py  test_storage.py
